drumkv1 - an old-school drum-kit sampler
----------------------------------------

ChangeLog


GIT HEAD

- Randomization of current parameters is now available
  through a new top-level push-button.
- Zero-crossing detection algorithm has been improved,
  most specially to mitigate transient clicks across
  offset points.
- Updated for the newer Qt5 development tools (>= 5.13).
- Per instance custom tuning (micro-tonal) option has
  been added to the previously existing global settings
  (cf. Help > Configure... > Tuning > Global, Instance).
- New DCF, LFO and DCA Enabled parameters.
- Configure updated to check for qtchooser availability.


0.9.8  2019-06-06  A Spring'19 Release.

- Improved slew-rate to DCF Formant coefficient updates.
- Dropped LFO Sync parameter as being irrelevant across
  element voicings.
- Fixed all LFO Panning and Volume modulation, now being
  correctly isolated on a per voice basis.
- Fixed initial LFO wave shapes on LV2 plug-in UI.
- Minor update to Debian packaging control file.


GIT HEAD

- Fixed initial DCO and LFO wave shapes on LV2 plug-in UI.
- Minor update to Debian packaging control file.


0.9.7  2019-04-14  A Spring-Break'19 Release.

- Corrected sample offset range internal reset.
- All audio input now get through without being processed
  by any or whole effects stage anymore.
- Re-defined all JACK stand-alone client application UNIX
  signal handling.
- Probable fix to sample offset range changes across native
  UI and loading and saving state.


0.9.6  2019-03-18  Pre-LAC2019 Release Frenzy.

- A gentlier shutdown for the JACK client standalone client.


0.9.5  2019-03-04  The End of Winter'19 release.

- Improved overall stability for current sample offset range
  property changes across UI's, eg. LV2 plug-in native GUI
  and a host generic provided one.
- HiDPI display screen support (Qt >= 5.6).
- A fake/visual piano-keyboard widget is now being introduced
  to the status bar.