@@ -44,6 +44,8 @@
 
 #include <math.h>
 
+#include <random>
+
 
 //-------------------------------------------------------------------------
 // drumkv1widget - impl.
@@ -839,6 +841,8 @@ void drumkv1widget::randomParams (void)
 		QMessageBox::Ok | QMessageBox::Cancel) == QMessageBox::Cancel)
 		return;
 
+	std::default_random_engine re(::time(NULL));
+
 	for (uint32_t i = 0; i < drumkv1::NUM_PARAMS; ++i) {
 		const drumkv1::ParamIndex index = drumkv1::ParamIndex(i);
 		// Filter out some non-randomizable parameters!...
@@ -858,14 +862,16 @@ void drumkv1widget::randomParams (void)
 			break;
 		drumkv1widget_param *pParam = paramKnob(index);
 		if (pParam) {
-			const float v = pParam->value();
-			const float q = 1000.0f * ::fabsf(pParam->maximum() - pParam->minimum());
-			const float r = pParam->minimum() + 0.001f * float(::rand() % int(q + 1));
-			float fValue = v;
-			if (drumkv1_param::paramFloat(index))
-				fValue += p * (r - v);
+			std::normal_distribution<float> nd;
+			const float q = 0.5f * p * (pParam->maximum() - pParam->minimum());
+			float fValue = pParam->value() + q * nd(re);
+			if (!drumkv1_param::paramFloat(index))
+				fValue = std::round(fValue);
+			if (fValue < pParam->minimum())
+				fValue = pParam->minimum();
 			else
-				fValue += ::roundf(r - v);
+			if (fValue > pParam->maximum())
+				fValue = pParam->maximum();
 			setParamValue(index, fValue);
 			updateParam(index, fValue);
 		}
