@@ -6,6 +6,13 @@ ChangeLog
 
 GIT HEAD
 
+- All randomizers now compliant to the standard normal
+  distribution. (EXPERIMENTAL)
+- Make sure compiler flags comply to c++11 as standard.
+
+
+GIT HEAD
+
 - Randomization of current parameters is now available
   through a new top-level push-button.
 - Zero-crossing detection algorithm has been improved,
